[package]
name = "nitroxide"
version = "0.1.0"
authors = ["Xithrius <xithrius@gmail.com>"]
edition = "2021"
rust-version = "1.61.0"
description = "Mass merge templates into repositories."
documentation = "https://github.com/Xithrius/nitroxide"
homepage = "https://github.com/Xithrius/nitroxide"
repository = "https://github.com/Xithrius/nitroxide"
license = "MIT OR Apache-2.0"
keywords = ["cli"]
categories = ["command-line-utilities"]

[dependencies]
serde = { version = "1.0.152", features = [ "derive" ] }
toml = "0.5.8"
color-eyre = "0.6.1"
clap = "4.0.32"

[[bin]]
bench = false
path = "src/main.rs"
name = "nitroxide"

[profile.dev]
lto = "off"

[profile.dev.package.backtrace]
opt-level = 3

[profile.release]
lto = "thin"
debug = 1
